# vegvisir

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Doxyfile  LICENSE  README.md  THIRD_PARTY_NOTICED.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: clang-tidy.yml  cpp.yml  docs.yml  pre-commit.yml  pylint-black.yml  python.yml  ros2.yml  ruff.yml  zizmor.yml
cpp/: CMakeLists.txt  README.md
cpp/cmake/: FetchG2O.cmake  FetchSophus.cmake  FetchTessil.cmake
cpp/icp_svd/: CMakeLists.txt  IcpSvd.cpp  IcpSvd.hpp
cpp/include/: GnssState.hpp  LocalMapGraph.hpp  LocalizationBackend.hpp  PoseKalmanFilter.hpp  SlamBackend.hpp  Vegvisir.hpp  VegvisirBackend.hpp  VegvisirConfig.hpp  VegvisirIO.hpp  VegvisirPGO.hpp
cpp/kalman_filter/: CMakeLists.txt  PoseKalmanFilter.cpp  PoseKalmanFilter.hpp
cpp/map_closures/: AlignRansac2D.cpp  AlignRansac2D.hpp  CMakeLists.txt  DensityMap.cpp  DensityMap.hpp  FeatureLayer.hpp  GroundAlign.cpp  GroundAlign.hpp  IOUtils.hpp  LbdFeatureLayer.cpp  LbdFeatureLayer.hpp  MapClosures.cpp  MapClosures.hpp  SiftFeatureLayer.cpp  SiftFeatureLayer.hpp
cpp/pgo/: CMakeLists.txt  pose_graph_optimizer.cpp  pose_graph_optimizer.hpp
cpp/src/: LocalMapGraph.cpp  LocalizationBackend.cpp  PoseKalmanFilter.cpp  QueryRecorder.cpp  QueryRecorder.hpp  SlamBackend.cpp  Vegvisir.cpp  VegvisirBackend.cpp  VegvisirIO.cpp  VegvisirPGO.cpp
cpp/voxel_map/: CMakeLists.txt  VoxelMap.cpp  VoxelMap.hpp  VoxelUtils.cpp  VoxelUtils.hpp
documentation/: architecture.md
python/: CMakeLists.txt  README.md  pyproject.toml
python/vegvisir/: __init__.py  map_closures.py  pose_graph_optimizer.py  vegvisir.py  voxel_map.py
python/vegvisir/pybind/: CMakeLists.txt  stl_vector_eigen.h  vegvisir_pybind.cpp
ros2/: README.md  vegvisir.repos
ros2/src/vegvisir/: CMakeLists.txt  package.xml
ros2/src/vegvisir/cmake/: FetchG2O.cmake  FetchTessil.cmake
ros2/src/vegvisir/include/: RosConversions.hpp  VegvisirNode.hpp
ros2/src/vegvisir/launch/: vegvisir.launch.py
ros2/src/vegvisir/map_closures/: FeatureLayer.hpp  GroundAlign.hpp  LbdFeatureLayer.cpp  LbdFeatureLayer.hpp  MapClosures.cpp  MapClosures.hpp  SiftFeatureLayer.cpp  SiftFeatureLayer.hpp
ros2/src/vegvisir/pgo/: pose_graph_optimizer.cpp
ros2/src/vegvisir/src/: LocalizationBackend.cpp  SlamBackend.cpp  Vegvisir.cpp  VegvisirIO.cpp  VegvisirNode.cpp  main.cpp
ros2/src/vegvisir/voxel_map/: VoxelMap.hpp
ros2/src/vegvisir_bringup/: CMakeLists.txt  package.xml  setup.cfg
ros2/src/vegvisir_bringup/config/: kiss_icp_params.yaml  vegvisir_params.yaml
ros2/src/vegvisir_bringup/launch/: kiss_icp_odometry.launch.py  vegvisir.launch.py  vegvisir_bringup.launch.py  vegvisir_external_odom.launch.py  vegvisir_kiss_icp.launch.py
ros2/src/vegvisir_bringup/rviz/: vegvisir.rviz
ros2/src/vegvisir_bringup/scripts/: odometry_to_ego_motion
ros2/src/vegvisir_bringup/vegvisir_bringup/: odometry_to_ego_motion_node.py
