# Copyright (c) Sensrad 2026

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "sensrad-vegvisir"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = ["numpy"]

[tool.scikit-build]
wheel.install-dir = "vegvisir/pybind"
wheel.packages = ["vegvisir"]
cmake.build-type = "Release"

[tool.ruff]
target-version = "py38"
line-length = 100
exclude = ["build", "_skbuild"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["vegvisir"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "C0103"]

[tool.pylint.format]
max-line-length = 100
