# Copyright (c) Sensrad 2026

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "sensrad-vegvisir"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["numpy"]

[tool.scikit-build]
wheel.install-dir = "vegvisir/pybind"
wheel.packages = ["vegvisir"]
cmake.build-type = "Release"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["build", "_skbuild"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["vegvisir"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116", "C0103", "R0801", "R0917"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 8
max-attributes = 10
max-public-methods = 35
