<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vegvisir_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for vegvisir SLAM/localization with various odometry sources</description>
  <maintainer email="perception@sensrad.se">Per Ception</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>

  <exec_depend>vegvisir</exec_depend>
  <exec_depend>kiss_icp</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
